test/files/neg/t8228.scala
object X {
  def bar = {
    def foo(x: Any) = ""
    val foo = foo(null)
    foo(null) // cycle in isApplicableBasedOnArity
  }
}
