test/files/neg/t8228.check
t8228.scala:4: error: recursive value foo needs type
    val foo = foo(null)
                 ^
one error found
